--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
-displayName=Example
-author=Nobody
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+displayName=XP Calculator
+author=Abelito75
+description=An XP Calculator that lets you see how far you'll get with X actions at Y xp.
+tags=calculator,xp
+plugins=com.xpcalculator.XPCalculatorPlugin
